--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "author": "Akshath Sivaprasad",
   "license": "MIT",
   "devDependencies": {
-    "@types/d3": "^4.12.0",
+    "@types/d3-ease": "^1.0.9",
+    "@types/d3-selection": "^1.4.1",
+    "@types/d3-zoom": "^1.7.4",
     "ts-loader": "^3.2.0",
     "typescript": "^3.7.2",
-    "webpack-dev-server": "^2.11.0",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.0"
   },
   "dependencies": {
-    "d3": "^4.12.2"
+    "d3-ease": "^1.0.6",
+    "d3-selection": "^1.4.1",
+    "d3-zoom": "^1.8.3"
   }
 }
