--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/d3-brush": "^1.0.10",
     "@types/d3-ease": "^1.0.9",
+    "@types/d3-force": "^1.2.1",
     "@types/d3-selection": "^1.4.1",
     "@types/d3-zoom": "^1.7.4",
     "ts-loader": "^3.2.0",
@@ -24,6 +25,7 @@
   "dependencies": {
     "d3-brush": "^1.1.5",
     "d3-ease": "^1.0.6",
+    "d3-force": "^2.0.1",
     "d3-selection": "^1.4.1",
     "d3-zoom": "^1.8.3"
   }
