add resize and drag

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/d3-brush": "^1.0.10",
+    "@types/d3-drag": "^1.2.3",
     "@types/d3-ease": "^1.0.9",
     "@types/d3-force": "^1.2.1",
     "@types/d3-selection": "^1.4.1",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "d3-brush": "^1.1.5",
+    "d3-drag": "^1.2.5",
     "d3-ease": "^1.0.6",
     "d3-force": "^2.0.1",
     "d3-selection": "^1.4.1",
