--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/d3-force": "^1.2.1",
     "@types/d3-selection": "^1.4.1",
     "@types/d3-zoom": "^1.7.4",
+    "@types/lodash": "^4.14.149",
     "ts-loader": "^3.2.0",
     "typescript": "^3.7.2",
     "webpack": "^3.10.0",
@@ -29,6 +30,7 @@
     "d3-ease": "^1.0.6",
     "d3-force": "^2.0.1",
     "d3-selection": "^1.4.1",
-    "d3-zoom": "^1.8.3"
+    "d3-zoom": "^1.8.3",
+    "lodash": "^4.17.15"
   }
 }
