--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/d3-selection": "^1.4.1",
     "@types/d3-zoom": "^1.7.4",
     "@types/lodash": "^4.14.149",
+    "@types/webpack": "^4.41.0",
+    "@types/webpack-dev-server": "^3.9.0",
     "ts-loader": "^3.2.0",
     "typescript": "^3.7.2",
     "webpack": "^3.10.0",
