--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/d3-array": "^2.0.0",
     "@types/d3-brush": "^1.0.10",
+    "@types/d3-color": "^1.2.2",
     "@types/d3-drag": "^1.2.3",
     "@types/d3-ease": "^1.0.9",
     "@types/d3-force": "^1.2.1",
@@ -30,6 +31,7 @@
   "dependencies": {
     "d3-array": "^2.4.0",
     "d3-brush": "^1.1.5",
+    "d3-color": "^1.4.0",
     "d3-drag": "^1.2.5",
     "d3-ease": "^1.0.6",
     "d3-force": "^2.0.1",
