--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/d3-ease": "^1.0.9",
     "@types/d3-force": "^1.2.1",
     "@types/d3-selection": "^1.4.1",
+    "@types/d3-transition": "^1.1.6",
     "@types/d3-zoom": "^1.7.4",
     "@types/lodash": "^4.14.149",
     "@types/webpack": "^4.41.0",
@@ -36,7 +37,7 @@
     "d3-ease": "^1.0.6",
     "d3-force": "^2.0.1",
     "d3-selection": "^1.4.1",
-    "d3-transition": "git+https://github.com/heyitaki/d3-transition.git",
+    "d3-transition": "^1.3.2",
     "d3-zoom": "^1.8.3",
     "lodash": "^4.17.15"
   }
