--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/d3-drag": "^1.2.3",
     "@types/d3-ease": "^1.0.9",
     "@types/d3-force": "^1.2.1",
+    "@types/d3-interpolate": "^3.0.1",
     "@types/d3-selection": "^1.4.1",
     "@types/d3-transition": "^1.1.6",
     "@types/d3-zoom": "^1.7.4",
@@ -36,6 +37,7 @@
     "d3-drag": "^1.2.5",
     "d3-ease": "^1.0.6",
     "d3-force": "^2.0.1",
+    "d3-interpolate": "^3.0.1",
     "d3-selection": "^1.4.1",
     "d3-transition": "^1.3.2",
     "d3-zoom": "^1.8.3",
